# spotify-alarm

./: .env.example  .gitignore  README.md  detect_sink.sh  makefile  pyproject.toml  requirements.txt  run.sh  setup.sh
service/: spotify-autoplay.old.service  spotify-autoplay.service  spotify-autoplay.timer  wine-games-auto-link-path.service
src/: main.py  pipewire.py  spotify_client.py
