[project]
package-mode = false
name = "spotify-alarm"
version = "0.1.0"
description = ""
authors = [
    {name = "lil-sussy",email = "naykeysnet@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "spotipy (>=2.25.1,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
